expanded error docs + tweaks
